@startuml

title __HOME's Class Diagram__\n

  namespace com.example.bbs {
    namespace ui.home {
      class com.example.bbs.ui.home.Comment {
          - commentContent : String
          - createTime : String
          - postTitle : String
          - username : String
          + Comment()
          + getCommentContent()
          + getCreateTime()
          + getPostTitle()
          + getUsername()
          + setCommentContent()
          + setCreateTime()
          + setPostTitle()
          + setUsername()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.home {
      class com.example.bbs.ui.home.CommentAdapter {
          - context : Context
          - data : List<Comment>
          - resource : int
          + CommentAdapter()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.home {
      class com.example.bbs.ui.home.CommentDetail {
          - cancel : Button
          - comments : List<Comment>
          - post_title : TextView
          # onCreate()
          ~ init()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.home {
      class com.example.bbs.ui.home.CommentSqliteOpenHelper {
          {static} - mInstance : SQLiteOpenHelper
          {static} + getMInstance()
          + onCreate()
          + onUpgrade()
          - CommentSqliteOpenHelper()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.home {
      class com.example.bbs.ui.home.HomeFragment {
          - posts : List<Post>
          - root : View
          + onCreateView()
          ~ init()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.home {
      class com.example.bbs.ui.home.Post {
          - content : String
          - createTime : String
          - recentUpdateTime : String
          - title : String
          - write : String
          + Post()
          + getContent()
          + getCreateTime()
          + getRecentUpdateTime()
          + getTitle()
          + getWrite()
          + setContent()
          + setCreateTime()
          + setRecentUpdateTime()
          + setTitle()
          + setWrite()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.home {
      class com.example.bbs.ui.home.PostAdapter {
          - context : Context
          - data : List<Post>
          - resource : int
          + PostAdapter()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.home {
      class com.example.bbs.ui.home.PostDetail {
          - cancel : Button
          - comment : Button
          - comment_content : EditText
          - post_content : TextView
          - post_createTime : TextView
          - post_title : TextView
          - post_write : TextView
          - recent_update_time : TextView
          - show_comment : ImageButton
          {static} + getNowTime()
          # onCreate()
          ~ addComment()
          ~ init()
      }
    }
  }
  

  com.example.bbs.ui.home.Comment .up.|> java.io.Serializable
  com.example.bbs.ui.home.CommentAdapter -up-|> android.widget.BaseAdapter
  com.example.bbs.ui.home.CommentDetail -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bbs.ui.home.CommentSqliteOpenHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.example.bbs.ui.home.HomeFragment -up-|> androidx.fragment.app.Fragment
  com.example.bbs.ui.home.HomeFragment o-- com.example.bbs.ui.login.User : user
  com.example.bbs.ui.home.Post .up.|> java.io.Serializable
  com.example.bbs.ui.home.PostAdapter -up-|> android.widget.BaseAdapter
  com.example.bbs.ui.home.PostDetail -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bbs.ui.home.PostDetail o-- com.example.bbs.ui.login.User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
